<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:gravity="start"
        android:layout_margin="20dp"
        android:textSize="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_row="1"
        android:layout_column="0"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hot"
        android:layout_row="1"
        android:layout_column="1"
        android:clickable="true"
        android:focusable="true"/>

    <CheckBox
        android:id="@+id/checkbox_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk_cb"
        android:layout_row="2"
        android:layout_column="0"/>
    <CheckBox
        android:id="@+id/checkbox_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar_cb"
        android:layout_row="3"
        android:layout_column="0"/>
    <CheckBox
        android:id="@+id/checkbox_lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon_cb"
        android:layout_row="4"
        android:layout_column="0"/>


</GridLayout>